deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-test1
  # 选择部署在哪个namespace
  namespace: firstproject1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-test1
  template:
    metadata:
      labels:
        app: django-test1
    spec:
      containers:
      # 指定容器名字和镜像地址
      - name: django-test1
        image: registry.cn-shanghai.aliyuncs.com/davidzhu/django-test1:v0.1.9
        command: ["sh", "-c"]
        # 启动容器时候启动的命令
        args:
          - python manage.py runserver 0.0.0.0:8000
        # 对外暴漏的端口
        ports:
        - containerPort: 8000
      
      # 阿里云镜像仓库的用户名和密码
      imagePullSecrets:
      - name: docker-hub-aliyun  

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  # 选择部署在哪个namespace
  namespace: firstproject1
spec:
  selector:
    app: django-test1
    
  # 明确指定为 ClusterIP 类型
  type: ClusterIP
  #type: NodePort
  ports:
    - name:  django-service
      # service 的端口
      port: 8000
      # 要访问的容器的端口
      targetPort: 8000
      # 对外暴漏的nodeport，可以供外部访问,如果是 clusterIP 的话就不需要
      # nodePort: 32323
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: django-ingress
  # 选择部署在哪个namespace
  namespace: firstproject1
spec:
  rules:
  - host: "example.ingredemo.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: django-service
          servicePort: 8000
